--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,6 @@
 ---
 galaxy_info:
+  author: Vincent Flesouras 
   author: Roderik van der Veer
   description: Ansible role to sets up a complete CLI environment on OSX. This role is part of the Superlumic project that aims to simplify repeat computer setups on OSX, 10.10 and up.
   license: MIT
@@ -11,6 +12,6 @@ galaxy_info:
   categories:
     - system
 dependencies:
-  - slac.superlumic-homebrew
-  - slac.superlumic-osx-defaults
+  - slac.grail-homebrew
+  - slac.grail-osx-defaults
 
